axion-ui/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: axion-deployment
spec:
  selector:
    matchLabels:
      app: axion-ui
  template:
    metadata:
      labels:
        app: axion-ui
    spec:
      containers:
      - name: axion-ui-container
        image: brijendra.azurecr.io/axion-app:881
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "25Mi"
            cpu: "50m"
          limits:
            memory: "50Mi"
            cpu: "250m"
