axion-ui/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: axion-service
spec:
  selector:
    app: axion-ui
  ports:
  - port: 80
    targetPort: 80
