axion-ui/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-ingress
  labels:
    app.kubernetes.io/name: axion-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: axion.krishomtrendstore.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: axion-service
            port: 
              number: 80
